--- a/.env
+++ b/.env
@@ -1,3 +1,26 @@
+SITE_NAME_HEADER=Digital Garden
+SITE_MAIN_LANGUAGE=en
+SITE_BASE_URL=
+SHOW_CREATED_TIMESTAMP=false
+TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
+SHOW_UPDATED_TIMESTAMP=false
+NOTE_ICON_DEFAULT=
+NOTE_ICON_TITLE=false
+NOTE_ICON_FILETREE=false
+NOTE_ICON_INTERNAL_LINKS=false
+NOTE_ICON_BACK_LINKS=false
+STYLE_SETTINGS_CSS=body.css-settings-manager { } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }
+STYLE_SETTINGS_BODY_CLASSES=theme-dark mod-linux is-mobile is-android is-tablet obsidian-app styled-scrollbars show-inline-title show-ribbon show-view-header css-settings-manager minimal-theme minimal-default-light minimal-readable minimal-things-dark minimal-light minimal-dark-tonal colorful-frame colorful-active links-int-on links-ext-on full-width-media minimal-folding chart-default-width table-default-width img-default-width iframe-default-width map-default-width ctp-macchiato ctp-full-palette ctp-bold-folder-title
+USE_FULL_RESOLUTION_IMAGES=false
 THEME=https://raw.githubusercontent.com/seanwcom/Red-Graphite-for-Obsidian/HEAD/theme.css
 BASE_THEME=dark
 dgHomeLink=true
+dgPassFrontmatter=false
+dgShowBacklinks=true
+dgShowLocalGraph=false
+dgShowInlineTitle=true
+dgShowFileTree=true
+dgEnableSearch=true
+dgShowToc=true
+dgLinkPreview=true
+dgShowTags=true
