--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ NOTE_ICON_TITLE=false
 NOTE_ICON_FILETREE=false
 NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=false
-STYLE_SETTINGS_CSS=body.css-settings-manager { } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }
+STYLE_SETTINGS_CSS=body.css-settings-manager { --ctp-h2: var(--ctp-text); --ctp-h1: var(--ctp-text); --ctp-h3: var(--ctp-lavender); --ctp-h4: var(--ctp-teal); --ctp-h5: var(--ctp-peach); --ctp-h6: var(--ctp-pink); } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }
 STYLE_SETTINGS_BODY_CLASSES=theme-dark mod-linux is-mobile is-android is-tablet obsidian-app styled-scrollbars show-inline-title show-ribbon show-view-header css-settings-manager ctp-macchiato ctp-full-palette ctp-bold-folder-title minimal-theme minimal-default-light minimal-things-dark minimal-readable minimal-light minimal-dark-tonal colorful-frame colorful-active links-int-on links-ext-on full-width-media minimal-folding chart-default-width table-default-width img-default-width iframe-default-width map-default-width
 USE_FULL_RESOLUTION_IMAGES=false
 THEME=https://raw.githubusercontent.com/seanwcom/Red-Graphite-for-Obsidian/HEAD/theme.css
